welcome.lessons.welcome.bat.bool1.ParotTrouble.scala.error
parotTrouble:4: error: not found: value f
	f=true
        ^parotTrouble:6: error: not found: value f
	f=false}
        ^parotTrouble:7: error: not found: value f
return f;
       ^